* ECCP Users: new module for administration of ECCP authorized users
* Dialer (ECCP): fix requests for agents that are not assigned to any queue.
* Dialer: fix bug in which a request for outgoing calls would repeatedly request
  already retried calls until the retry limit even if calls with lower retry
  numbers were available.
* Dialer (ECCP): fix bug in which an agent that has just been called Hangup on
  would show as offline instead of online in getagentstatus request.
* Dialer (ECCP): implement new events "pausestart" and "pauseend"
* Dialer (ECCP): fix incorrect parameter verification in "getcallinfo" request
* Dialer (ECCP): implement "getqueuescript" request
* Dialer (ECCP): the "getcampaigninfo" request has been extended to return 
  additional form attributes "name" and "description" in the <form> tag.
* Dialer (ECCP): implement "filterbyagent" request
* Dialer (ECCP): Added the following fields to response for "getagentstatus" 
  request: onhold pauseinfo remote_channel callinfo . 
* Login Logout: fix time format representation for time in calls.
* Dialer (ECCP): fixed bug that prevented the hold/schedulecall/transfercall
  requirements from working after agent entered a pause while still connected
  to a call.

1.5-4.2 (SVN revision 2972)
* Dialer (ECCP): extended "transfercall" request to work with calls connected
  to an agent that were not tracked by the dialer.
* Dialer (ECCP): fixed bug in which a transfer request of an incoming campaign
  call into an outgoing campaign queue results in a new incoming agentlinked 
  message.
* Dialer (ECCP): fixed bug in which a transfer request of an incoming campaign
  call into a incoming campaign queue (the same one the call came from or a 
  different one) results in an agentunlinked event with an incomplete agent
  number. 
* Installer: add section in extensions_custom.conf that will hold required
  callcenter extensions for extra functionality.
* Dialer (ECCP): implement "schedulecall" request