@@ -1,3 +1,5 @@
+* Agents: Do not leave newly created or modified agent without an ECCP password.
+  The ECCP password is autogenerated if required.
 * ECCP Users: new module for administration of ECCP authorized users
 * Dialer (ECCP): fix requests for agents that are not assigned to any queue.
 * Dialer: fix bug in which a request for outgoing calls would repeatedly request
